[gd_scene load_steps=17 format=2]

[ext_resource path="res://firebase-ui/field_containers/password_field/password_field.tscn" type="PackedScene" id=1]
[ext_resource path="res://firebase-ui/field_containers/email_field/email_field.tscn" type="PackedScene" id=2]
[ext_resource path="res://firebase-ui/buttons/email_button/email_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://firebase-ui/buttons/res/icons/forward_to_inbox-24px.svg" type="Texture" id=4]
[ext_resource path="res://firebase-ui/auth/sign_container/sign_container.gd" type="Script" id=5]
[ext_resource path="res://firebase-ui/buttons/anonymous_button/anonymous_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://firebase-ui/field_containers/base_field_container/field_container.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
content_margin_left = 20.0
content_margin_right = 25.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color( 0, 0, 0, 0.117647 )
shadow_size = 4
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
content_margin_left = 20.0
content_margin_right = 25.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color( 0, 0, 0, 0.117647 )
shadow_size = 4
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=5]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.815686, 0.00784314, 0.105882, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.117647 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 10.0
content_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=8]
resource_local_to_scene = true
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.815686, 0.00784314, 0.105882, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.117647 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=9]
resource_local_to_scene = true
resource_name = "AnonymousButtonResource"
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0.956863, 0.705882, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.117647 )
shadow_size = 4
shadow_offset = Vector2( 0, 2 )

[node name="SignContainer" type="PanelContainer"]
anchor_right = 0.321766
anchor_bottom = 0.426667
margin_right = -9.48801
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 305.0
margin_bottom = 241.0
rect_min_size = Vector2( 290, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EmailField" parent="Container" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 290.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 2 )

[node name="PasswordField" parent="Container" instance=ExtResource( 1 )]
margin_top = 62.0
margin_right = 290.0
margin_bottom = 114.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 7 )
size = Vector2( 32, 32 )
text = ""

[node name="HSeparator" type="HSeparator" parent="Container"]
margin_top = 124.0
margin_right = 290.0
margin_bottom = 154.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 30

[node name="ButtonsContainer" type="VBoxContainer" parent="Container"]
margin_top = 164.0
margin_right = 290.0
margin_bottom = 226.0
size_flags_vertical = 10
custom_constants/separation = 10

[node name="EmailButton" parent="Container/ButtonsContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 290.0
margin_bottom = 62.0
custom_styles/panel = SubResource( 5 )

[node name="Separator" type="HBoxContainer" parent="Container/ButtonsContainer"]
visible = false
margin_top = 72.0
margin_right = 290.0
margin_bottom = 86.0

[node name="LSeparator" type="HSeparator" parent="Container/ButtonsContainer/Separator"]
margin_right = 124.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 6 )

[node name="Or" type="Label" parent="Container/ButtonsContainer/Separator"]
margin_left = 128.0
margin_right = 161.0
margin_bottom = 14.0
custom_styles/normal = SubResource( 7 )
custom_colors/font_color = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "or"

[node name="RSeparator" type="HSeparator" parent="Container/ButtonsContainer/Separator"]
margin_left = 165.0
margin_right = 290.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 6 )

[node name="SignupButton" parent="Container/ButtonsContainer" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 290.0
margin_bottom = 158.0
custom_styles/panel = SubResource( 8 )
texture = ExtResource( 4 )
text = "Sign up with email"

[node name="AnonymousButton" parent="Container/ButtonsContainer" instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 290.0
margin_bottom = 158.0
custom_styles/panel = SubResource( 9 )

[connection signal="pressed" from="Container/ButtonsContainer/EmailButton" to="." method="_on_EmailButton_pressed"]
[connection signal="pressed" from="Container/ButtonsContainer/SignupButton" to="." method="_on_SignupButton_pressed"]
[connection signal="pressed" from="Container/ButtonsContainer/AnonymousButton" to="." method="_on_AnonymousButton_pressed"]
